check the first 9 characters from the input code and use it as the coilID. code scanned can be longer than 9 characters.

--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -31,7 +31,7 @@
                 <input type="submit" value="Submit" />
             </p>
         </fieldset>
-
+        <li>@ViewBag.Error</li>
         <li>CoilID: @ViewBag.CoilID </li>
         <li>Type: @ViewBag.Type </li>
         <li>Color: @ViewBag.Color </li>
