--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -7,47 +7,45 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
 
 <!DOCTYPE html>
 <html>
+
 <body>
     @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-
+        <script type="text/javascript">
+            $('#button1').click(
+                function () {
+                    $("#code").submit();
+                });
+        </script>
     }
 
-    @using (Ajax.BeginForm("Index", "Scanner",
-                            new AjaxOptions { UpdateTargetId = "divInterestDeatils" }))
-    {
-        <fieldset>
-            <div id="divInterestDeatils"></div>
-            <div class="editor-label">
-                @Html.LabelFor(model => model.ID)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.ID)
-            </div>
-            <p>
-                <input type="submit" value="Submit" />
-            </p>
-        </fieldset>
-        <li>@ViewBag.Error</li>
-        <li>CoilID: @ViewBag.CoilID </li>
-        <li>Type: @ViewBag.Type </li>
-        <li>Color: @ViewBag.Color </li>
-        <li>Weight: @ViewBag.Weight </li>
-        <li>Gauge: @ViewBag.Gauge </li>
-        <li>Width: @ViewBag.Width </li>
-        <li>Order: @ViewBag.Order </li>
-        <li>P_order: @ViewBag.P_order </li>
-        <li>Month_recd: @ViewBag.Month_recd </li>
-        <li>Date_inwh: @ViewBag.Date_inwh </li>
-        <li>Date_transfer: @ViewBag.Date_transfer </li>
-        <li>Last_stocktake_date: @ViewBag.Last_stocktake_date </li>
-        <li>Status: @ViewBag.Status </li>
-        <li>Clength: @ViewBag.Clength </li>
-    }
-
+    <form id="code" action="/Scanner/Index" method="post">
+        <div class="editor-label">
+            @Html.LabelFor(model => model.ID)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.ID)
+        </div>
+    </form>
+    <li>@ViewBag.Error</li>
+    <li>CoilID: @ViewBag.CoilID </li>
+    <li>Type: @ViewBag.Type </li>
+    <li>Color: @ViewBag.Color </li>
+    <li>Weight: @ViewBag.Weight </li>
+    <li>Gauge: @ViewBag.Gauge </li>
+    <li>Width: @ViewBag.Width </li>
+    <li>Order: @ViewBag.Order </li>
+    <li>P_order: @ViewBag.P_order </li>
+    <li>Month_recd: @ViewBag.Month_recd </li>
+    <li>Date_inwh: @ViewBag.Date_inwh </li>
+    <li>Date_transfer: @ViewBag.Date_transfer </li>
+    <li>Last_stocktake_date: @ViewBag.Last_stocktake_date </li>
+    <li>Status: @ViewBag.Status </li>
+    <li>Clength: @ViewBag.Clength </li>
+    <input type="button" id="button1" value="Refresh" />
 
 </body>
 </html>
