--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -2,50 +2,85 @@
 @{
 
     ViewBag.Title = "Scanner Page";
-}
-
-@{
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
-<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
 
 <!DOCTYPE html>
 <html>
 
-<body>
+<body style="font-size:30px;">
     @section Scripts {
+        <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript">
-            $('#button1').click(
-                function () {
-                    $("#code").submit();
+
+            function submitDetailsForm() {
+                $("#code").submit();
+            }
+
+            $(document).ready(function () {
+                $('#ID').on('paste', function () {
+                    setTimeout(function () {
+                        $("#code").submit();
+
+                    }, 1);
+                    setTimeout(function () {
+                        $('#ID').focus();
+
+                    }, 0);
+
                 });
+                //$('#ID').focus();
+            });
         </script>
     }
+    <div class="col-md-6">
+        <form id="code" action="Index" method="post">
+            <div class="editor-label">
+                CoilID Scanned
+            </div>
+            <div id="codeInput" class="editor-field">
+                <input type="text" name="ID" id="ID" />
+            </div>
 
-    <form id="code" action="/Scanner/Index" method="post">
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID)
+        </form>
+        <input type='button' value='Submit form' onClick='submitDetailsForm()' />
+
+        <ul style="list-style: none;">
+            <li style="color:red">@ViewBag.Error</li>
+            <li>CoilID: @ViewBag.CoilID </li>
+            <li>Type: @ViewBag.Type </li>
+            <li>Color: @ViewBag.Color </li>
+            <li>Weight: @ViewBag.Weight </li>
+            <li>Gauge: @ViewBag.Gauge </li>
+            <li>Width: @ViewBag.Width </li>
+            <li>Order: @ViewBag.Order </li>
+            <li>P_order: @ViewBag.P_order </li>
+            <li>Month_recd: @ViewBag.Month_recd </li>
+            <li>Date_inwh: @ViewBag.Date_inwh </li>
+            <li>Date_transfer: @ViewBag.Date_transfer </li>
+            <li>Last_stocktake_date: @ViewBag.Last_stocktake_date </li>
+            <li>Status: @ViewBag.Status </li>
+            <li>Clength: @ViewBag.Clength </li>
+        </ul>
+    </div>
+    <div class="col-md-6">
+        <div style="width:400px; text-align:center;">
+            <img src="C:\Scanner\frame.png" alt="Sample Photo" height="400" width="400" />
+            Upload Data
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.ID)
-        </div>
-    </form>
-    <li>@ViewBag.Error</li>
-    <li>CoilID: @ViewBag.CoilID </li>
-    <li>Type: @ViewBag.Type </li>
-    <li>Color: @ViewBag.Color </li>
-    <li>Weight: @ViewBag.Weight </li>
-    <li>Gauge: @ViewBag.Gauge </li>
-    <li>Width: @ViewBag.Width </li>
-    <li>Order: @ViewBag.Order </li>
-    <li>P_order: @ViewBag.P_order </li>
-    <li>Month_recd: @ViewBag.Month_recd </li>
-    <li>Date_inwh: @ViewBag.Date_inwh </li>
-    <li>Date_transfer: @ViewBag.Date_transfer </li>
-    <li>Last_stocktake_date: @ViewBag.Last_stocktake_date </li>
-    <li>Status: @ViewBag.Status </li>
-    <li>Clength: @ViewBag.Clength </li>
-    <input type="button" id="button1" value="Refresh" />
+
+        <form id="code" action="Index" method="post">
+            <div class="editor-label">
+                CoilID Uploaded
+            </div>
+            <div id="codeInput" class="editor-field">
+                <input type="text" name="ID" id="ID" />
+            </div>
+
+        </form>
+    </div>
 
 </body>
 </html>
