--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Scanner.Models.CoilIDModel
+﻿@model Scanner.Models.CoilDetail
 @{
 
     ViewBag.Title = "Scanner Page";
@@ -9,37 +9,24 @@
 <!DOCTYPE html>
 <html>
 
-<body style="font-size:30px;">
+<body style="font-size:20px;">
     @section Scripts {
         <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript">
 
-            function submitDetailsForm() {
-                $("#code").submit();
-            }
-
             $(document).ready(function () {
                 $('#ID').on('paste', function () {
                     setTimeout(function () {
                         $("#code").submit();
-                        $('#ID').focus();
-
                     }, 1);
-
                 });
 
                 $('#upload').on('paste', function () {
                     setTimeout(function () {
                         $("#code").submit();
-                        $('#upload').focus();
-
                     }, 1);
-
                 });
-                //$('#ID').focus();
-                //$('#upload').focus();
-
             });
         </script>
     }
@@ -48,34 +35,14 @@
             <div class="editor-label">
                 CoilID Scanned
             </div>
-            <div id="codeInput" class="editor-field">
-                <input type="text" name="ID" id="ID" />
+            <div class="editor-field">
+                @Html.TextBoxFor(model => model.CoilDetails[0].ID, new { id = "ID" })
             </div>
-
         </form>
-        <input type='button' value='Submit form' onClick='submitDetailsForm()' />
-
-        <ul style="list-style: none;">
-            <li style="color:red">@ViewBag.Error</li>
-            <li>CoilID: @ViewBag.CoilID </li>
-            <li>Type: @ViewBag.Type </li>
-            <li>Color: @ViewBag.Color </li>
-            <li>Weight: @ViewBag.Weight </li>
-            <li>Gauge: @ViewBag.Gauge </li>
-            <li>Width: @ViewBag.Width </li>
-            <li>Order: @ViewBag.Order </li>
-            <li>P_order: @ViewBag.P_order </li>
-            <li>Month_recd: @ViewBag.Month_recd </li>
-            <li>Date_inwh: @ViewBag.Date_inwh </li>
-            <li>Date_transfer: @ViewBag.Date_transfer </li>
-            <li>Last_stocktake_date: @ViewBag.Last_stocktake_date </li>
-            <li>Status: @ViewBag.Status </li>
-            <li>Clength: @ViewBag.Clength </li>
-        </ul>
     </div>
     <div class="col-md-6">
-        <div style="width:400px; text-align:center;">
-            <img src="C:\Scanner\frame.png" alt="Sample Photo" height="400" width="400" />
+        <div style="width:300px; text-align:center;">
+            <img src="C:\Scanner\frame.png" alt="QRcode for upload data" height="300" width="300" />
             Upload Data
         </div>
 
@@ -83,8 +50,8 @@
             <div class="editor-label">
                 CoilID Uploaded
             </div>
-            <div id="codeInput" class="editor-field">
-                @Html.EditorFor(model => model.ID)
+            <div class="editor-field">
+                @Html.TextBoxFor(model => model.CoilDetails[0].ID, new { id = "upload" })
             </div>
         </form>
     </div>
@@ -93,39 +60,101 @@
         <table class="table table-condensed table-hover">
             <tr>
                 <th>
-                    Product Code
+                    ID
                 </th>
                 <th>
-                    Product Name
+                    Type
                 </th>
                 <th>
-                    Quantity
+                    Color
                 </th>
                 <th>
-                    Price
+                    Weight
                 </th>
                 <th>
-                    Total Amount
+                    Gauge
+                </th>
+                <th>
+                    Width
+                </th>
+                <th>
+                    Order
+                </th>
+                <th>
+                    P_order
+                </th>
+                <th>
+                    Month_recd
+                </th>
+                <th>
+                    Date_inwh
+                </th>
+                <th>
+                    Date_transfer
+                </th>
+                <th>
+                    Last_stocktake_date
+                </th>
+                <th>
+                    Status
+                </th>
+                <th>
+                    Clength
                 </th>
             </tr>
 
+            @{
+                //To make unique Id
+                int i = 0;
+                foreach (var item in Model.CoilDetails.ToList())
+                {
             <tr>
                 <td>
-                    @ViewBag.CoilID
+                    @item.ID
                 </td>
                 <td>
-                    @ViewBag.Type
+                    @item.Type
                 </td>
                 <td>
-                    @ViewBag.Color
+                    @item.Color
                 </td>
                 <td>
-                    @ViewBag.Weight
+                    @item.Weight
                 </td>
                 <td>
-                    @ViewBag.Gauge
+                    @item.Gauge
+                </td>
+                <td>
+                    @item.Width
+                </td>
+                <td>
+                    @item.Order
+                </td>
+                <td>
+                    @item.P_order
+                </td>
+                <td>
+                    @item.Month_recd
+                </td>
+                <td>
+                    @item.Date_inwh
+                </td>
+                <td>
+                    @item.Date_transfer
+                </td>
+                <td>
+                    @item.Last_stocktake_date
+                </td>
+                <td>
+                    @item.Status
+                </td>
+                <td>
+                    @item.Clength
                 </td>
             </tr>
+                    i++;
+                }
+            }
         </table>
     </div>
 
