--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -6,30 +6,55 @@
 
 }
 
+@section Scripts {
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#clear').click(function () {
+                $("#data tr").remove();
+            });
+
+            function submitForm() {
+                setTimeout(function () {
+                    $("#code").submit();
+                }, 5000);
+            }
+
+            $('#fsdfs').on('paste', function () {
+                submitForm();
+            });
+
+            $(window).keydown(function (event) {
+                submitForm();
+                if (event.keyCode == 13) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            $('#dflksj').on('paste', function () {
+                setTimeout(function () {
+                    $.ajax({
+                        type: "POST",
+                        url: "Scanner/Index",
+                        data: $("#code").serialize(),
+                        success: function () {
+                            alert("submitted");
+                        }
+
+                    })
+                }, 0);
+            });
+            $("#ID").val(""); 
+            $("#ID").focus();
+        });
+    </script>
+}
+
 <!DOCTYPE html>
 <html>
-
 <body style="font-size:20px;">
-    @section Scripts {
-        <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
-        <script type="text/javascript">
-
-            $(document).ready(function () {
-                $('#ID').on('paste', function () {
-                    setTimeout(function () {
-                        $("#code").submit();
-                    }, 1);
-                });
-
-                $('#upload').on('paste', function () {
-                    setTimeout(function () {
-                        $("#code").submit();
-                    }, 1);
-                });
-            });
-        </script>
-    }
     <div class="col-md-6">
         <form id="code" action="Index" method="post">
             <div class="editor-label">
@@ -38,6 +63,7 @@
             <div class="editor-field">
                 @Html.TextBoxFor(model => model.CoilDetails[0].ID, new { id = "ID" })
             </div>
+            <input type="submit" id="clear" value="clear table" />
         </form>
     </div>
     <div class="col-md-6">
@@ -46,7 +72,7 @@
             Upload Data
         </div>
 
-        <form id="code" action="Index" method="post">
+        <form id="codeUpload" action="Index" method="post">
             <div class="editor-label">
                 CoilID Uploaded
             </div>
@@ -57,7 +83,8 @@
     </div>
 
     <div class="col-md-12">
-        <table class="table table-condensed table-hover">
+        <div style="color:red; font-size:40px">@ViewBag.Error</div>
+        <table id="data" class="table table-condensed table-hover">
             <tr>
                 <th>
                     ID
@@ -102,61 +129,58 @@
                     Clength
                 </th>
             </tr>
-
             @{
-                //To make unique Id
                 int i = 0;
                 foreach (var item in Model.CoilDetails.ToList())
                 {
-            <tr>
-                <td>
-                    @item.ID
-                </td>
-                <td>
-                    @item.Type
-                </td>
-                <td>
-                    @item.Color
-                </td>
-                <td>
-                    @item.Weight
-                </td>
-                <td>
-                    @item.Gauge
-                </td>
-                <td>
-                    @item.Width
-                </td>
-                <td>
-                    @item.Order
-                </td>
-                <td>
-                    @item.P_order
-                </td>
-                <td>
-                    @item.Month_recd
-                </td>
-                <td>
-                    @item.Date_inwh
-                </td>
-                <td>
-                    @item.Date_transfer
-                </td>
-                <td>
-                    @item.Last_stocktake_date
-                </td>
-                <td>
-                    @item.Status
-                </td>
-                <td>
-                    @item.Clength
-                </td>
-            </tr>
+                    <tr>
+                        <td>
+                            @item.ID
+                        </td>
+                        <td>
+                            @item.Type
+                        </td>
+                        <td>
+                            @item.Color
+                        </td>
+                        <td>
+                            @item.Weight
+                        </td>
+                        <td>
+                            @item.Gauge
+                        </td>
+                        <td>
+                            @item.Width
+                        </td>
+                        <td>
+                            @item.Order
+                        </td>
+                        <td>
+                            @item.P_order
+                        </td>
+                        <td>
+                            @item.Month_recd
+                        </td>
+                        <td>
+                            @item.Date_inwh
+                        </td>
+                        <td>
+                            @item.Date_transfer
+                        </td>
+                        <td>
+                            @item.Last_stocktake_date
+                        </td>
+                        <td>
+                            @item.Status
+                        </td>
+                        <td>
+                            @item.Clength
+                        </td>
+                    </tr>
                     i++;
                 }
             }
         </table>
     </div>
-
 </body>
 </html>
