--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -62,6 +62,7 @@
             </div>
             <div class="editor-field">
                 @Html.TextBoxFor(model => model.CoilDetails[0].ID, new { id = "ID" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "insert" })
             </div>
             <input type="submit" id="clear" value="clear table" />
         </form>
@@ -81,7 +82,9 @@
             </div>
         </form>
     </div>
-
+    <div>
+        <input type="submit" id="upload" value="upload"/>
+    </div>
     <div class="col-md-12">
         <div style="color:red; font-size:40px">@ViewBag.Error</div>
         <table id="data" class="table table-condensed table-hover">
