--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -8,11 +8,12 @@
 
 @section Scripts {
     <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function () {
+            $('#ID').focus();
+
             $('#clear').click(function () {
-                $('#data').find("tr:gt(0)").remove();
+                $('#data').find("tr:gt(0)").remove(); //remove all table rows except the headings
             });
 
             $('#uploadButton').click(function () {
@@ -26,158 +27,185 @@
                 }, 0);
             }
 
-            function displayForm() {
-                setTimeout(function () {
-                    $("#displayForm").submit();
-                }, 5000);
-            }
+            //function displayForm() {
+            //    setTimeout(function () {
+            //        $("#tableData").submit(function () {
+            //            $('#Save').val($('#ID').val());
+            //            $('#ID').val('');
+            //            $('#ID').focus();
+            //            return true;
+            //        });
+            //    }, 0);
+            //}
 
             $('#ID').on('paste input', function () {
-                displayForm();
-            });
-
-            $(window).keydown(function (event) {
-                if (event.keyCode == 13) {
-                    event.preventDefault();
-                    return false;
+                if ($('#ID').val().length == 9) {
+                    $('#Save').val($('#ID').val());
+                    $('#ID').val('');
+                    $("#tableData").submit();
                 }
             });
 
-            $("#ID").val(""); 
-            $("#ID").focus();
-            $('#uploadFlag').val("");
+            //$('#ID').on('input', function (event) {
+            //    if (event.keyCode == 13) {
+            //        event.preventDefault();
+            //        displayForm();
+            //    }
+            //});
+
+
+
+            //$('#ID').keypress(function (event) {
+            //    if (event.keyCode == 13) {
+            //        //setTimeout(function () {
+            //            event.preventDefault();
+            //            $('#ID').focus();
+            //            $("#tableData").submit();
+
+            //        //}, 0);
+            //    }
+            //});
+
+            $('#ID').keypress(function (e) {
+                if (e.which == 13) {
+                    return false;    //<---- Add this line
+                }
+            });
         });
     </script>
 }
 
 <!DOCTYPE html>
 <html>
-<body style="font-size:20px;">
-    <div class="col-md-6">
-        <form id="displayForm" action="Index" method="post">
+<body style="font-size:15px;">
+    <form id="tableData" action="Index" method="post">
+
+        <div class="col-md-6">
             <div class="editor-label">
                 CoilID Scanned
             </div>
             <div class="editor-field">
-                @Html.TextBoxFor(model => model.CoilDetails[0].ID, new { id = "ID" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Input, new { id = "ID" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Save, new { id = "Save" })
             </div>
-        </form>
-        <input type="submit" id="clear" value="clear table" />
-        <input type="submit" id="uploadButton" value="upload" />
-    </div>
-    <div class="col-md-6">
-        <div style="width:300px; text-align:center;">
-            <img src="C:\Scanner\frame.png" alt="QRcode for upload data" height="300" width="300" />
-            Upload Data
+            <input type="submit" id="clear" value="clear table" />
+            <input type="submit" id="uploadButton" value="upload" />
         </div>
-
-        <form id="uploadForm" action="Index" method="post">
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.CoilDetails[0].ID, new { id = "upload", type="hidden" })
-                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "uploadFlag", type="hidden" })
+        <div class="col-md-6">
+            <div style="width:300px; text-align:center;">
+                <img src="C:\Scanner\frame.png" alt="QRcode for upload data" height="300" width="300" />
+                Upload Data
             </div>
-        </form>
-    </div>
-    <div class="col-md-12">
-        <div style="color:red; font-size:40px">@ViewBag.Error @ViewBag.Upload</div>
-        <table id="data" class="table table-condensed table-hover">
-            <tr>
-                <th>
-                    ID
-                </th>
-                <th>
-                    Type
-                </th>
-                <th>
-                    Color
-                </th>
-                <th>
-                    Weight
-                </th>
-                <th>
-                    Gauge
-                </th>
-                <th>
-                    Width
-                </th>
-                <th>
-                    Order
-                </th>
-                <th>
-                    P_order
-                </th>
-                <th>
-                    Month_recd
-                </th>
-                <th>
-                    Date_inwh
-                </th>
-                <th>
-                    Date_transfer
-                </th>
-                <th>
-                    Last_stocktake_date
-                </th>
-                <th>
-                    Status
-                </th>
-                <th>
-                    Clength
-                </th>
-            </tr>
-            @{
-                if (Model != null && Model.CoilDetails[0].ID != "")
-                {
-                    foreach (var item in Model.CoilDetails.ToList())
+
+            <div class="editor-field">
+                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "uploadFlag", type = "hidden" })
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div style="color:red; font-size:40px">@ViewBag.Error @ViewBag.Upload</div>
+            <table id="data" class="table table-condensed table-hover">
+                <tr>
+                    <th>
+                        ID
+                    </th>
+                    <th>
+                        Type
+                    </th>
+                    <th>
+                        Color
+                    </th>
+                    <th>
+                        Weight
+                    </th>
+                    <th>
+                        Gauge
+                    </th>
+                    <th>
+                        Width
+                    </th>
+                    <th>
+                        Order
+                    </th>
+                    <th>
+                        P_order
+                    </th>
+                    <th>
+                        Month_recd
+                    </th>
+                    <th>
+                        Date_inwh
+                    </th>
+                    <th>
+                        Date_transfer
+                    </th>
+                    <th>
+                        Last_stocktake_date
+                    </th>
+                    <th>
+                        Status
+                    </th>
+                    <th>
+                        Clength
+                    </th>
+                </tr>
+                @{
+                    int i = 0;
+                    if (Model != null && Model.CoilDetails != null) //&& Model.CoilDetails[0].ID != "")
                     {
-                        <tr>
-                            <td>
-                                @item.ID
-                            </td>
-                            <td>
-                                @item.Type
-                            </td>
-                            <td>
-                                @item.Color
-                            </td>
-                            <td>
-                                @item.Weight
-                            </td>
-                            <td>
-                                @item.Gauge
-                            </td>
-                            <td>
-                                @item.Width
-                            </td>
-                            <td>
-                                @item.Order
-                            </td>
-                            <td>
-                                @item.P_order
-                            </td>
-                            <td>
-                                @item.Month_recd
-                            </td>
-                            <td>
-                                @item.Date_inwh
-                            </td>
-                            <td>
-                                @item.Date_transfer
-                            </td>
-                            <td>
-                                @item.Last_stocktake_date
-                            </td>
-                            <td>
-                                @item.Status
-                            </td>
-                            <td>
-                                @item.Clength
-                            </td>
-                        </tr>
+                        foreach (var item in Model.CoilDetails.ToList())
+                        {
+                            <tr>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].ID, new { @id = "ID_" + i })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Type, new { @id = "Type_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Color, new { @id = "Color_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Weight, new { @id = "Weight_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Gauge, new { @id = "Gauge_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Width, new { @id = "Width_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Order, new { @id = "Order_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].P_order, new { @id = "P_order_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Month_recd, new { @id = "Month_recd_" + i })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Date_inwh, new { @id = "Date_inwh_" + i })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Date_transfer, new { @id = "Date_transfer_" + i })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Last_stocktake_date, new { @id = "Last_stocktake_date_" + i })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Status, new { @id = "Status_" + i, style = "width:50px" })
+                                </td>
+                                <td>
+                                    @Html.TextBoxFor(model => model.CoilDetails[i].Clength, new { @id = "Clength_" + i })
+                                </td>
+                            </tr>
+                            i++;
+                        }
                     }
                 }
-            }
-        </table>
-    </div>
+            </table>
+        </div>
+        <input type="hidden" id="finished" name="finished" value="1" />
+    </form>
+
 </body>
 </html>
