--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@model Scanner.Models.CoilDetail
 @{
-
     ViewBag.Title = "Scanner Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
-
 }
 
 @section Scripts {
@@ -12,16 +10,22 @@
         $(document).ready(function () {
             $('#ID').focus();
             $('#ID').val('');
+            $('#uploadFlag').val('');
 
             $('#clear').click(function () {
                 $('#data').find("tr:gt(0)").remove(); //remove all table rows except the headings
                 $('#Save').val('');
+                $('#Save2').val('');
                 $('#uploadFlag').val("");
             });
 
             $('#uploadButton').click(function () {
+                $('#Save2').val($('#Save').val());
+                $('#data').find("tr:gt(0)").remove(); //remove all table rows except the headings
                 $('#uploadFlag').val("UPLOAD");
-                $("#tableData").submit();
+                $("#tableData").submit(function () {
+                    $('#Save').val('');
+                });
             });
 
             function uploadForm() {
@@ -39,8 +43,7 @@
 
             $('#ID').keypress(function (e) {
                 if (e.which == 13) {
-                    //e.preventDefault();
-                    return false;    //<---- Add this line
+                    return false;
                 }
             });
         });
@@ -49,28 +52,32 @@
 
 <!DOCTYPE html>
 <html>
-<body style="font-size:15px;">
+<body style="font-size:20px;">
 
     <form id="tableData" action="Index" method="post">
         <div class="col-md-6">
-            <div class="editor-label">
+            <div style="font-size:25px;" class="editor-label">
                 CoilID Scanned
             </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(model => model.CoilDetails[0].Input, new { id = "ID" })
-                @Html.TextBoxFor(model => model.CoilDetails[0].Save, new { id = "Save", style = "width: 300px" })
+            <div class="editor-field col-md-6">
+                @Html.TextAreaFor(model => model.CoilDetails[0].Input, new { id = "ID", style = "width: 520px; height:250px; border: 2px solid #ccc;" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Save, new { id = "Save", type = "hidden" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Save2, new { id = "Save2", type = "hidden" })
+                <h3>Please press Tab button to display data</h3>
             </div>
-            <input type="submit" id="clear" value="clear table" />
-            <input type="submit" id="uploadButton" value="upload" />
+            <div class="col-md-4">
+                <input type="submit" id="clear" value="clear table" style="font-size:25px; width:150px; height:100px;" />
+                <input type="submit" id="uploadButton" value="upload table" style="font-size:25px; width:150px; height:100px;" />
+            </div>
         </div>
         <div class="col-md-6">
             <div style="width:300px; text-align:center;">
-                <img src="C:\Scanner\frame.png" alt="QRcode for upload data" height="300" width="300" />
+                <img src="C:\Scanner\Upload-QRcode.png" alt="QRcode for upload data" height="300" width="300" />
                 Upload Data
             </div>
 
             <div class="editor-field">
-                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "uploadFlag" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "uploadFlag", type="hidden" })
             </div>
         </div>
         <div class="col-md-12">
@@ -122,52 +129,52 @@
                 </tr>
                 @{
                     int i = 0;
-                    if (Model != null && Model.CoilDetails != null) //&& Model.CoilDetails[0].ID != "")
+                    if (Model != null && Model.CoilDetails != null)
                     {
-                        foreach (var item in Model.CoilDetails.ToList())
+                        foreach (var item in Model.CoilDetails.Skip(1).ToList())
                         {
                             <tr>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].ID, new { @id = "ID_" + i })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].ID, new { @id = "ID_" + i })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Type, new { @id = "Type_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Type, new { @id = "Type_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Color, new { @id = "Color_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Color, new { @id = "Color_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Weight, new { @id = "Weight_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Weight, new { @id = "Weight_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Gauge, new { @id = "Gauge_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Gauge, new { @id = "Gauge_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Width, new { @id = "Width_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Width, new { @id = "Width_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Order, new { @id = "Order_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Order, new { @id = "Order_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].P_order, new { @id = "P_order_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].P_order, new { @id = "P_order_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Month_recd, new { @id = "Month_recd_" + i })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Month_recd, new { @id = "Month_recd_" + i })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Date_inwh, new { @id = "Date_inwh_" + i })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Date_inwh, new { @id = "Date_inwh_" + i })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Date_transfer, new { @id = "Date_transfer_" + i })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Date_transfer, new { @id = "Date_transfer_" + i })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Last_stocktake_date, new { @id = "Last_stocktake_date_" + i })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Last_stocktake_date, new { @id = "Last_stocktake_date_" + i })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Status, new { @id = "Status_" + i, style = "width:50px" })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Status, new { @id = "Status_" + i, style = "width:50px" })
                                 </td>
                                 <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i].Clength, new { @id = "Clength_" + i })
+                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Clength, new { @id = "Clength_" + i })
                                 </td>
                             </tr>
                             i++;
